--- a/lib/jump_tickets_web/components/layouts/root.html.heex
+++ b/lib/jump_tickets_web/components/layouts/root.html.heex
@@ -10,8 +10,13 @@
     <link phx-track-static rel="stylesheet" href={~p"/assets/app.css"} />
     <script defer phx-track-static type="text/javascript" src={~p"/assets/app.js"}>
     </script>
+
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+      rel="stylesheet"
+    />
   </head>
-  <body class="bg-white">
+  <body class="bg-red-200 min-h-screen text-gray-200">
     {@inner_content}
   </body>
 </html>
